--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -327,6 +327,24 @@ section.slideshow-cover .item {
     height: 100vh;
 }
 
+.slideshow-projects .item {
+    width: 100%;
+    height: 400px;
+}
+
+.slideshow-projects .item > figure {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.slideshow-projects .item > figure > img {
+    width: 100%;
+}
+
 .owl-controls {
     position: absolute;
     top: 40%;
